--- a/Views/MakeUserView.xaml
+++ b/Views/MakeUserView.xaml
@@ -7,35 +7,61 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="Créer un nouvel utilisateur" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="10"/>
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="Nom d'utilisateur:" Margin="0" />
-        <TextBox Grid.Row="2" Grid.Column="0" Margin="0 5 5 5"/>
-        <TextBlock Grid.Row="1" Grid.Column="1" Text="Adresse e-mail:" Margin="0"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="0 5 5 0"/>
-        <TextBlock Grid.Row="3" Grid.Column="0" Text="Mot de passe:" Margin="0"/>
-        <TextBox Grid.Row="4" Grid.Column="0" Margin="0 5 5 0"/>
-        <TextBlock Grid.Row="3" Grid.Column="1" Text="Confirmer le mot de passe:" Margin="0"/>
-        <TextBox Grid.Row="4" Grid.Column="1" Margin="0 5 5 5"/>
-        <TextBlock Grid.Row="5" Grid.Column="0" Text="Statut:" Margin="0"/>
-        <TextBox Grid.Row="6" Grid.Column="0" Margin="0 5 5 5"/>
-        <Button Grid.Row="7" Grid.Column="0" Content="Créer l'utilisateur" Margin="5 5 0 0"/>
-        <Button Grid.Row="7" Grid.Column="1" Content="Annuler" Margin="0 0 0 5"/>
+        <TextBlock Grid.Row="0" Text="Créer un nouvel utilisateur" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="10"/>
+        <Grid Grid.Row="1" Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="Nom d'utilisateur" />
+            <TextBox Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"  Grid.Row="1" Grid.Column="0" Margin="0 10 10 0" />
+            <TextBlock Grid.Row="0" Grid.Column="1" Text="Adresse e-mail:" />
+            <TextBox Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1"  Margin="0 10 10 0"/>
+        </Grid>
+        <Grid Grid.Row="2" Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="Mot de passe:" />
+            <TextBox Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="0" Margin="0 10 10 0"/>
+            <TextBlock Grid.Row="0" Grid.Column="1" Text="Confirmer le mot de passe:" />
+            <TextBox Grid.Row="1" Grid.Column="1" Margin="0 10 10 0"/>
+        </Grid>
+        <Grid Grid.Row="3" Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" Text="Statut:"/>
+            <ComboBox Text="{Binding Statut, UpdateSourceTrigger=PropertyChanged}" Width="100" Grid.Row="1" HorizontalAlignment="Left">
+                <ComboBoxItem Content="Admin"/>
+                <ComboBoxItem Content="User" IsSelected="True"/>
+            </ComboBox>
+        </Grid>
+        <Grid Grid.Row="4" Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0" Content="Créer l'utilisateur" Margin="0 10 10 0"/>
+            <Button Grid.Column="1" Content="Annuler" Margin="0 10 10 0"/>
+        </Grid>
+        
     </Grid>
 </UserControl>
